Fix System.FormatException error with certain warnings and messages
This fixes a problem where a errors and warnings containing certain characters could cause the build to fail with a `System.FormatException: Input string was not in a correct format.` error.

--- a/Reupen.MSBuild.GitHubLogger/Reupen.MSBuild.GitHubLogger.csproj
+++ b/Reupen.MSBuild.GitHubLogger/Reupen.MSBuild.GitHubLogger.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <Version>$(VersionPrefix)1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
